[tool.poetry]
name = "jolt"
version = "1.0.1"
description = ""
authors = ["Hamza Saleem <hamza.saleem2@yahoo.com>"]
readme = "README.md"
packages = [{include = "jolt"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
airtable = "^0.4.8"
airtable-python-wrapper = "^0.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
exclude = ["alembic"]

[tool.flake8]
max-line-length = 130
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist", "alembic"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true
